--- a/totolist/src/app/app.component.html
+++ b/totolist/src/app/app.component.html
@@ -1,4 +1,6 @@
 
+
+
 <div class="container w-50 pt-3">
 <h1>Todo List</h1>
 <div class="row">
@@ -21,3 +23,4 @@
   </table>
 </div>
 </div>
+<router-outlet></router-outlet>
